# hermes-self-wake-plugin

./: .gitignore  LICENSE  NOTICE  README.md  __init__.py  plugin.yaml  pyproject.toml
.github/workflows/: ci.yml
docs/: architecture.md  compatibility.md  install-use.md  operator-runbook.md
docs/core-patch/: 0001-internal-session-wake-v1.patch  README.md  test-plan.md  upstream-pr.md
experimental/compat_shim/: README.md
self_wake/: __init__.py  capabilities.py  cli.py  compat_shim.py  config.py  doctor.py  kanban.py  receipts.py  schemas.py  sessions.py  tools.py
skills/kanban-self-wake/: SKILL.md
tests/: conftest.py  test_capabilities.py  test_cli.py  test_compat_shim.py  test_doctor.py  test_kanban_subscribe.py  test_plugin_layout.py  test_receipts.py  test_register.py  test_review_fixes.py  test_sessions.py  test_tools.py  test_wake_dispatch.py
tests/fixtures/: sessions.json
