[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hermes-self-wake"
version = "1.1.1"
description = "Portable operator tools for Hermes internal session wake routing; bundles a compat shim for vanilla Hermes (native/shim/inspect-only modes)."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-timeout",
]

[tool.setuptools.packages.find]
include = ["self_wake*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
