[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hermes-self-wake"
version = "1.2.1"
description = "Portable operator tools for Hermes internal session wake routing; bundles a compat shim for vanilla Hermes (native or shim capability sources; fails closed to inspect-only)."
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-timeout",
]

[tool.setuptools.packages.find]
include = ["self_wake*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
# Test fakes reproduce vanilla Hermes source shapes for the drift check's
# inspect.getsource anchors; they are read, never executed.
"tests/test_compat_shim.py" = ["F821", "F841", "E702", "E701"]
